# jamesETsmith.github.io

./: .gitignore  LICENSE  README.md  blog.html  blog_metadata.json  build.py  generate_blog_metadata.py  index.html  publications.html  pyproject.toml
assets/css/: minimal.css
assets/js/: blog_data.js
blog_posts/: 2023-01-16-embedding-visualization.html  2023_01_16.html  2025-12-03-diy-cluster.html  2025_12_03.html  2026-01-05-twitter-tags.html  2026-01-07-monitoring.html  2026-01-21-mHC-papers.html  2026_01_05.html  2026_01_07.html
blog_posts/2025_12_03/: client.conf  ethernet_setup.sh  launch_build_server.sh  launch_client.sh  launch_scheduler.sh  scheduler.conf  server.conf  server2.conf  server3.conf
blog_posts/2026_01_05/: ai_socratic_jan_2026.csv  categories.md  convert_graphml_to_json.py  graph_data.json  index.html  tags.graphml  tags.md  tags_v2.graphml  tags_with_links.graphml
content/posts/: 2023-01-16-embedding-visualization.md  2025-12-03-diy-cluster.md  2026-01-05-twitter-tags.md  2026-01-07-monitoring.md  2026-01-21-mHC-papers.md
jamesetsmith_github_io.egg-info/: PKG-INFO  SOURCES.txt
resume/: metadata.typ  template.typ
resume/modules_en/: professional.typ  skills.typ
resume_typst/modules_en/: professional.typ
templates/: post.html
