[project]
name = "jamesetsmith-github-io"
version = "0.1.0"
description = "Blog generator for James E. T. Smith's website"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2",
    "markdown",
    "python-frontmatter",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
